fix: remove extra padding from the desktop details element Card: https://app.clickup.com/t/86c0g28yh

--- a/src/styles/globals/_text-block.css
+++ b/src/styles/globals/_text-block.css
@@ -195,7 +195,7 @@ span:first-child + .text-block {
     .details .text-block[text-block-media-position="inside-right"] .text-block__content {
         margin-left: 0;
         margin-right: 0;
-        padding-left: var(--spacing-m);
+        padding-left: 0;
         padding-right: var(--spacing-m);
     }
 }
